# Vivli-2025

./: README.md  Rag_Vivli.ipynb  Vivli_CLSI_AMR_Package4R_Script.R  app.py  package-lock.json  package.json  pyproject.toml  rag.py  replit.md  validation_data.csv
static/: medical-app.js  script.js  style.css
templates/: index.html
